# ImageClasifier

./: .gitignore  .pre-commit-config.yaml  Jupyter_Notebook.ipynb  README.md  bearClassifier.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  main.yml
tests/: test_basic.py  test_data.py  test_integration.py  test_model.py
